[package]
name = "ecs-checker"
version = "0.1.0"
authors = ["Andrew Kroh <andrew.kroh@elastic.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version  = "1.0.59" }
